--- a/common/scss/typography.scss
+++ b/common/scss/typography.scss
@@ -26,8 +26,9 @@ h1 {
     margin-top: 1.5em;
   }
 
-  // Inline code: softer look
-  code {
+  // Inline code: softer look (also overrides Published Page Fix theme)
+  code,
+  &:not(pre) > code {
     background-color: var(--eu-surface-2);
     color: var(--primary);
     border: 1px solid var(--eu-border);
